set(MODEL_NAME model)
set(MODEL_SOURCES 
        Atmosphere/Functors/IrrigationWater_Functors.h
        Atmosphere/Functors/Met_Functors.h
        Atmosphere/Functors/Radiation_Functors.h
        Atmosphere/Functors/SnowPack_Functors.h
        Atmosphere/Functors/SoilEvaporation_Functors.h
        Atmosphere/Functors/SurfaceWater_Functors.h
        Atmosphere/AtmModel.cpp
        Atmosphere/AtmModel.h
        Atmosphere/Irrigation.cpp
        Atmosphere/Irrigation.h
        Atmosphere/Irrigation_Functions.cpp
        Atmosphere/Irrigation_Functions.h
        Atmosphere/Meteorological_Data.cpp
        Atmosphere/Meteorological_Data.h
        Atmosphere/Meteorological_Data_Functions.cpp
        Atmosphere/Meteorological_Data_Functions.h
        Atmosphere/Radiation.cpp
        Atmosphere/Radiation.h
        Atmosphere/Radiation_Functions.cpp
        Atmosphere/Radiation_Functions.h
        Atmosphere/SnowPack.cpp
        Atmosphere/SnowPack.h
        Atmosphere/SnowPack_Functions.cpp
        Atmosphere/SnowPack_Functions.h
        Atmosphere/SoilEvaporation.cpp
        Atmosphere/SoilEvaporation.h
        Atmosphere/SoilEvaporation_Functions.cpp
        Atmosphere/SoilEvaporation_Functions.h
        Atmosphere/Surface_Water.cpp
        Atmosphere/Surface_Water.h
        Atmosphere/Surface_Water_Functions.cpp
        Atmosphere/Surface_Water_Functions.h
        HBV/Functor/HBV_Functor.h
        HBV/HBV.cpp
        HBV/HBV.h
        HBV/HBV_Functions.cpp
        HBV/HBV_Functions.h
        HBV/HBVModel.cpp
        HBV/HBVModel.h
        PLANT/Functors/InterCeption_Functors.h
        PLANT/Functors/Plant_Functors.h
        PLANT/Functors/PotTranspiration_Functors.h
        PLANT/Functors/Salt_Functors.h
        PLANT/Functors/WaterUptake_Functors.h
        PLANT/Interception.cpp
        PLANT/Interception.h
        PLANT/Plant.cpp
        PLANT/Plant.h
        PLANT/PlantModel.cpp
        PLANT/PlantModel.h
        PLANT/Potential_Transpiration.cpp
        PLANT/Potential_Transpiration.h
        PLANT/Salt.cpp
        PLANT/Salt.h
        PLANT/Salt_Functions.cpp
        PLANT/Salt_Functions.h
        PLANT/WaterUptake.cpp
        PLANT/WaterUptake.h
        PLANT_NC/Functors/Allocation/AlloLeafMass.h
        PLANT_NC/Functors/Allocation/AlloRootMass.h
        PLANT_NC/Functors/Allocation/AlloTemplate.h
        PLANT_NC/Functors/BiomassDescription/BioMass.h
        PLANT_NC/Functors/GrowthStages/GrowthStages.h
        PLANT_NC/Functors/LitterFall/LitterTemplate.h
        PLANT_NC/Functors/PhotoSynthesis/GPP_Drivers.h
        PLANT_NC/Functors/PhotoSynthesis/LogisticGrowth.h
        PLANT_NC/Functors/PhotoSynthesis/PhotoGreenIndexResponse.h
        PLANT_NC/Functors/PhotoSynthesis/PhotoNLeafResponse.h
        PLANT_NC/Functors/PhotoSynthesis/PhotoPLeafResponse.h
        PLANT_NC/Functors/PhotoSynthesis/PhotoRadEff.h
        PLANT_NC/Functors/PhotoSynthesis/PhotoTemp.h
        PLANT_NC/Functors/PhotoSynthesis/PhotoTempResponseDirect.h
        PLANT_NC/Functors/Respiration/RespirationTemplate.h
        PLANT_NC/Functors/UptakeFromSoil/PlantUptake.h
        PLANT_NC/Functors/NC_Plant_Functors.h
        PLANT_NC/NC_Drivings.cpp
        PLANT_NC/NC_Drivings.h
        PLANT_NC/NC_Drivings_Functions.cpp
        PLANT_NC/NC_Drivings_Functions.h
        PLANT_NC/NC_Plant.cpp
        PLANT_NC/NC_Plant.h
        PLANT_NC/NC_Plant_Functions.cpp
        PLANT_NC/NC_Plant_Functions.h
        PLANT_NC/PlantOrgModel.cpp
        PLANT_NC/PlantOrgModel.h
        SOIL/Functors/Drainage_Functor.h
        SOIL/Functors/HydFunctors.h
        SOIL/Functors/Profile_Functors.h
        SOIL/Functors/Thermal_Functors.h
        SOIL/Hydraulic.cpp
        SOIL/Hydraulic.h
        SOIL/Hydraulic_Functions.cpp
        SOIL/Hydraulic_Functions.h
        SOIL/PedoFunctions.h
        SOIL/Profile.cpp
        SOIL/Profile.h
        SOIL/Profile_Functions.cpp
        SOIL/Profile_Functions.h
        SOIL/Soil_Drainage.cpp
        SOIL/Soil_Drainage.h
        SOIL/Soil_Drainage_Functions.cpp
        SOIL/Soil_Drainage_Functions.h
        SOIL/Soil_Frost.cpp
        SOIL/Soil_Frost.h
        SOIL/Soil_Frost_Functions.cpp
        SOIL/Soil_Frost_Functions.h
        SOIL/Soil_HeatF.cpp
        SOIL/Soil_HeatF.h
        SOIL/Soil_HeatF_Functions.cpp
        SOIL/Soil_HeatF_Functions.h
        SOIL/Soil_HeatPump.cpp
        SOIL/Soil_HeatPump.h
        SOIL/Soil_HeatPump_Functions.cpp
        SOIL/Soil_HeatPump_Functions.h
        SOIL/Soil_WaterF.cpp
        SOIL/Soil_WaterF.h
        SOIL/Soil_WaterF_Functions.cpp
        SOIL/Soil_WaterF_Functions.h
        SOIL/SoilModel.cpp
        SOIL/SoilModel.h
        SOIL/Thermal.cpp
        SOIL/Thermal.h
        SOIL/Thermal_Functions.cpp
        SOIL/Thermal_Functions.h
        SOIL/ThermalCoef.cpp
        SOIL/ThermalCoef.h
        SOIL_NC/Functors/BasicGas_Functors.h
        SOIL_NC/Functors/Methane_Functors.h
        SOIL_NC/Functors/NC_GasFluxFunctors.h
        SOIL_NC/Functors/NOxide_Functors.h
        SOIL_NC/Functors/NC_ExternalInputs_Functors.h
        SOIL_NC/Functors/NC_Minerals_Functors.h
        SOIL_NC/Functors/NC_Organic_Functors.h
        SOIL_NC/Functors/NC_Soil_Functors.h
        SOIL_NC/Functors/P_Minerals_Functors.h
        SOIL_NC/AbioticResponses.cpp
        SOIL_NC/AbioticResponses.h
        SOIL_NC/NC_ExternalInputs.cpp
        SOIL_NC/NC_ExternalInputs.h
        SOIL_NC/NC_ExternalInputs_Functions.cpp
        SOIL_NC/NC_ExternalInputs_Functions.h
        SOIL_NC/NC_GasFlux.cpp
        SOIL_NC/NC_GasFlux.h
        SOIL_NC/NC_GasFlux_Functions.cpp
        SOIL_NC/NC_GasFlux_Functions.h
        SOIL_NC/NC_Mineral.cpp
        SOIL_NC/NC_Mineral.h
        SOIL_NC/NC_Mineral_Functions.cpp
        SOIL_NC/NC_Mineral_Functions.h
        SOIL_NC/NC_Organic.cpp
        SOIL_NC/NC_Organic.h
        SOIL_NC/NC_Organic_Functions.cpp
        SOIL_NC/NC_Organic_Functions.h
        SOIL_NC/NC_SoilManagement.cpp
        SOIL_NC/NC_SoilManagement.h
        SOIL_NC/NC_SoilManagement_Functions.cpp
        SOIL_NC/NC_SoilManagement_Functions.h
        SOIL_NC/P_ExternalInputs.cpp
        SOIL_NC/P_ExternalInputs.h
        SOIL_NC/P_ExternalInputs_Functions.cpp
        SOIL_NC/P_ExternalInputs_Functions.h
        SOIL_NC/P_Mineral.cpp
        SOIL_NC/P_Mineral.h
        SOIL_NC/P_Mineral_Functions.cpp
        SOIL_NC/P_Mineral_Functions.h
        SOIL_NC/SoilOrgModel.cpp
        SOIL_NC/SoilOrgModel.h
        Structure/Functors/Structure_Functors.h
        Structure/Functors/Technical_Functors.h
        Structure/Additional_BioticVariables.cpp
        Structure/Additional_BioticVariables.h
        Structure/Additional_BioticVariables_Functions.cpp
        Structure/Additional_BioticVariables_Functions.h
        Structure/Additional_Variables.cpp
        Structure/Additional_Variables.h
        Structure/Additional_Variables_Functions.cpp
        Structure/Additional_Variables_Functions.h
        Structure/Numerical.cpp
        Structure/Numerical.h
        Structure/Numerical_Functions.cpp
        Structure/Numerical_Functions.h
        Structure/Structure.cpp
        Structure/Structure.h
        Structure/Structure_Functions.cpp
        Structure/Structure_Functions.h
        Structure/StructureModel.cpp
        Structure/StructureModel.h
        Structure/Technical.cpp
        Structure/Technical.h
        Structure/Technical_Functions.cpp
        Structure/Technical_Functions.h
        FunctionProperties.cpp
        FunctionProperties.h
        Basic_Functors.h
        GlobalInfo.cpp
        GlobalInfo.h
        ModelFunctions.cpp
        ModelFunctions.h
        PhysConst.cpp
        PhysConst.h
        SimModule.cpp
        SimModule.h
)


set(MODEL_INCLUDES
    "./"
)


add_library(${MODEL_NAME} STATIC
    ${MODEL_SOURCES}
 )
target_include_directories(${MODEL_NAME} PRIVATE
    ${MODEL_INCLUDES})
target_link_libraries(${MODEL_NAME} INTERFACE
    ${PG_LIB_NAME} )



